// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl list credentials should work (default formatting) 1`] = `
"id                                    name                type     data  created            
79a34eed-5a90-49d2-8a05-439c197e33f2  CI test credential  generic  -     02/23/2022, 6:06 PM
afcb870e-92d2-4437-95ed-862454b287ca  CI test credential  generic  -     02/23/2022, 6:01 PM
0f59223c-6967-423b-9f5b-cc31331ea38a  CI test credential  generic  -     02/23/2022, 5:57 PM
d5e19e97-06cc-41fb-a25e-e2c52fc828ea  CI test credential  generic  -     02/23/2022, 5:55 PM
c67bdc33-7f46-4cb3-b33b-96636e4f9751  CI test credential  generic  -     02/23/2022, 5:50 PM
c0714caa-be8b-4c35-9f03-02f2bda620af  CI test credential  generic  -     02/23/2022, 5:29 PM
f3c69f30-1d8a-4b3d-abe7-0ab343300d01  CI test credential  generic  -     02/23/2022, 5:26 PM
8d587415-667e-4040-8a67-a17f65a456d8  CI test credential  generic  -     02/23/2022, 5:21 PM
d143a820-dde3-468f-8e55-33e8e0e68c47  CI test credential  generic  -     02/23/2022, 5:17 PM
34d44390-9a26-4ad0-9ed5-d84233b8446b  CI test credential  generic  -     02/23/2022, 5:01 PM
"
`;

exports[`refactrctl list credentials should work 1`] = `
"id                                    name                type     data  created            
79a34eed-5a90-49d2-8a05-439c197e33f2  CI test credential  generic  -     02/23/2022, 6:06 PM
afcb870e-92d2-4437-95ed-862454b287ca  CI test credential  generic  -     02/23/2022, 6:01 PM
0f59223c-6967-423b-9f5b-cc31331ea38a  CI test credential  generic  -     02/23/2022, 5:57 PM
d5e19e97-06cc-41fb-a25e-e2c52fc828ea  CI test credential  generic  -     02/23/2022, 5:55 PM
c67bdc33-7f46-4cb3-b33b-96636e4f9751  CI test credential  generic  -     02/23/2022, 5:50 PM
c0714caa-be8b-4c35-9f03-02f2bda620af  CI test credential  generic  -     02/23/2022, 5:29 PM
f3c69f30-1d8a-4b3d-abe7-0ab343300d01  CI test credential  generic  -     02/23/2022, 5:26 PM
8d587415-667e-4040-8a67-a17f65a456d8  CI test credential  generic  -     02/23/2022, 5:21 PM
d143a820-dde3-468f-8e55-33e8e0e68c47  CI test credential  generic  -     02/23/2022, 5:17 PM
34d44390-9a26-4ad0-9ed5-d84233b8446b  CI test credential  generic  -     02/23/2022, 5:01 PM
"
`;

exports[`refactrctl list credentials should work 2`] = `
"[
    {
        \\"_id\\": \\"621677bd55de26c78132ff46\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T18:06:53.399Z\\",
        \\"id\\": \\"79a34eed-5a90-49d2-8a05-439c197e33f2\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62167675f3d04e86a999ea2f\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T18:01:25.899Z\\",
        \\"id\\": \\"afcb870e-92d2-4437-95ed-862454b287ca\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"6216759955de26c2c532ff31\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:57:45.932Z\\",
        \\"id\\": \\"0f59223c-6967-423b-9f5b-cc31331ea38a\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"621674fff3d04e509499ea1e\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:55:11.494Z\\",
        \\"id\\": \\"d5e19e97-06cc-41fb-a25e-e2c52fc828ea\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"621673d455de2642d332ff25\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:50:12.103Z\\",
        \\"id\\": \\"c67bdc33-7f46-4cb3-b33b-96636e4f9751\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62166efcf3d04efb7b99ea0f\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:29:32.866Z\\",
        \\"id\\": \\"c0714caa-be8b-4c35-9f03-02f2bda620af\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62166e4bf3d04e6f0699ea09\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:26:35.260Z\\",
        \\"id\\": \\"f3c69f30-1d8a-4b3d-abe7-0ab343300d01\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62166d01f3d04ec50299ea01\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:21:05.523Z\\",
        \\"id\\": \\"8d587415-667e-4040-8a67-a17f65a456d8\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62166c1655de26b6dc32ff0f\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:17:10.604Z\\",
        \\"id\\": \\"d143a820-dde3-468f-8e55-33e8e0e68c47\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"6216686bf3d04e26c899e9f2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-23T17:01:31.143Z\\",
        \\"id\\": \\"34d44390-9a26-4ad0-9ed5-d84233b8446b\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    }
]
"
`;

exports[`refactrctl list credentials should work 3`] = `
"-
    _id: 621677bd55de26c78132ff46
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T18:06:53.399Z'
    id: 79a34eed-5a90-49d2-8a05-439c197e33f2
    name: CI test credential
    type: generic
-
    _id: 62167675f3d04e86a999ea2f
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T18:01:25.899Z'
    id: afcb870e-92d2-4437-95ed-862454b287ca
    name: CI test credential
    type: generic
-
    _id: 6216759955de26c2c532ff31
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:57:45.932Z'
    id: 0f59223c-6967-423b-9f5b-cc31331ea38a
    name: CI test credential
    type: generic
-
    _id: 621674fff3d04e509499ea1e
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:55:11.494Z'
    id: d5e19e97-06cc-41fb-a25e-e2c52fc828ea
    name: CI test credential
    type: generic
-
    _id: 621673d455de2642d332ff25
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:50:12.103Z'
    id: c67bdc33-7f46-4cb3-b33b-96636e4f9751
    name: CI test credential
    type: generic
-
    _id: 62166efcf3d04efb7b99ea0f
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:29:32.866Z'
    id: c0714caa-be8b-4c35-9f03-02f2bda620af
    name: CI test credential
    type: generic
-
    _id: 62166e4bf3d04e6f0699ea09
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:26:35.260Z'
    id: f3c69f30-1d8a-4b3d-abe7-0ab343300d01
    name: CI test credential
    type: generic
-
    _id: 62166d01f3d04ec50299ea01
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:21:05.523Z'
    id: 8d587415-667e-4040-8a67-a17f65a456d8
    name: CI test credential
    type: generic
-
    _id: 62166c1655de26b6dc32ff0f
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:17:10.604Z'
    id: d143a820-dde3-468f-8e55-33e8e0e68c47
    name: CI test credential
    type: generic
-
    _id: 6216686bf3d04e26c899e9f2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-23T17:01:31.143Z'
    id: 34d44390-9a26-4ad0-9ed5-d84233b8446b
    name: CI test credential
    type: generic

"
`;

exports[`refactrctl list credentials throws on missing arguments 1`] = `
"refactrctl credentials [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of project containing the credentials  [string] [required]
      --type  [string] [choices: \\"api_token\\", \\"aws_access_key\\", \\"azure_service_principal\\", \\"bearer_token\\", \\"generic\\", \\"ssh_key\\", \\"username_password\\", \\"vault_app_role\\", \\"google_service_account\\"]
      --sort        Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list jobs should work (default formatting) 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccca11d42b9be6898365e0\\",
        \\"webhook\\": {
            \\"ip_whitelist\\": []
        },
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:50:25.094Z\\",
        \\"disable_on_failure\\": false,
        \\"enabled\\": true,
        \\"pipeline_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"pipeline_revision_id\\": \\"61ccc95a8997cfeb71742855\\",
        \\"name\\": \\"How Do We Know It Works?\\",
        \\"trigger_type\\": \\"manual\\",
        \\"suppress_vars\\": false,
        \\"suppress_outputs\\": false,
        \\"suppress_events\\": false,
        \\"last_run\\": \\"2022-02-23T18:10:17.734Z\\",
        \\"last_status\\": \\"Succeeded\\"
    }
]
"
`;

exports[`refactrctl list jobs should work 3`] = `
"-
    _id: 61ccca11d42b9be6898365e0
    webhook:
        ip_whitelist: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:50:25.094Z'
    disable_on_failure: false
    enabled: true
    pipeline_id: 61ccc379d42b9b0f518365db
    pipeline_revision_id: 61ccc95a8997cfeb71742855
    name: How Do We Know It Works?
    trigger_type: manual
    suppress_vars: false
    suppress_outputs: false
    suppress_events: false
    last_run: '2022-02-23T18:10:17.734Z'
    last_status: Succeeded

"
`;

exports[`refactrctl list jobs throws on missing arguments 1`] = `
"refactrctl jobs [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the jobs  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl list organizations should work (default formatting) 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 2`] = `
"[
    {
        \\"_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"address\\": \\"123 Main St.\\",
        \\"city\\": \\"New York\\",
        \\"state\\": \\"NY\\",
        \\"zip\\": \\"12345\\",
        \\"contact_name\\": \\"Victoria Drake\\",
        \\"contact_email\\": \\"victoria.drake@sophos.com\\",
        \\"name\\": \\"CLI e2e\\",
        \\"created\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"modified\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"plan\\": \\"starter\\",
        \\"plan_quotas\\": {
            \\"total_credits\\": 25,
            \\"project_count\\": 10,
            \\"user_count\\": 15,
            \\"agent_count\\": 10,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        }
    },
    {
        \\"_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"name\\": \\"Refactr\\",
        \\"created\\": \\"2020-10-10T07:07:53.294Z\\",
        \\"modified\\": \\"2020-11-01T23:15:21.605Z\\",
        \\"contact_email\\": \\"anthony@refactr.it\\",
        \\"contact_name\\": \\"Anthony Rowlands\\",
        \\"city\\": \\"Seattle\\",
        \\"state\\": \\"WA\\",
        \\"zip\\": \\"12345\\",
        \\"plan\\": \\"admin\\",
        \\"plan_quotas\\": {
            \\"project_count\\": -1,
            \\"user_count\\": -1,
            \\"agent_count\\": -1,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        },
        \\"address\\": \\"123 Main St.\\",
        \\"image_id\\": \\"6036851a545c5e5481871c88\\",
        \\"capabilities\\": {
            \\"publish_catalogs\\": true
        },
        \\"public\\": true
    }
]
"
`;

exports[`refactrctl list organizations should work 3`] = `
"-
    _id: 61cc93942529b6ec9681e4e2
    address: 123 Main St.
    city: New York
    state: NY
    zip: '12345'
    contact_name: Victoria Drake
    contact_email: victoria.drake@sophos.com
    name: CLI e2e
    created: '2021-12-29T16:57:56.369Z'
    modified: '2021-12-29T16:57:56.369Z'
    plan: starter
    plan_quotas:
        total_credits: 25
        project_count: 10
        user_count: 15
        agent_count: 10
        run_minutes: -1
        support_hours: 0
-
    _id: 5f9f2d08e2f1bb2436e6f5b0
    name: Refactr
    created: '2020-10-10T07:07:53.294Z'
    modified: '2020-11-01T23:15:21.605Z'
    contact_email: anthony@refactr.it
    contact_name: Anthony Rowlands
    city: Seattle
    state: WA
    zip: '12345'
    plan: admin
    plan_quotas:
        project_count: -1
        user_count: -1
        agent_count: -1
        run_minutes: -1
        support_hours: 0
    address: 123 Main St.
    image_id: 6036851a545c5e5481871c88
    capabilities:
        publish_catalogs: true
    public: true

"
`;

exports[`refactrctl list pipeline-revisions throws on missing arguments 1`] = `
"refactrctl pipeline-revisions [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the project containing the pipeline revision  [string] [required]
      --pipeline-id  ID of the pipeline containing the pipeline revision  [string] [required]
      --limit  [number]
      --offset  [number]

Missing required arguments: project-id, pipeline-id
"
`;

exports[`refactrctl list pipelines should work 1`] = `
"_id                       organization_id           project_id                name                          step_count  revision_count  created            
61e72f74597da5d29cac3c49  61cc93942529b6ec9681e4e2  61ccbe03d42b9bdcc88365d8  Practical                     0           1               01/18/2022, 9:21 PM
61ccc379d42b9b0f518365db  61cc93942529b6ec9681e4e2  61ccbe03d42b9bdcc88365d8  The Answer is Always Testing  1           3               12/29/2021, 8:22 PM
"
`;

exports[`refactrctl list pipelines should work 2`] = `
"[
    {
        \\"_id\\": \\"61e72f74597da5d29cac3c49\\",
        \\"feature_tags\\": [],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-01-18T21:21:56.247Z\\",
        \\"modified\\": \\"2022-01-18T21:21:56.247Z\\",
        \\"step_count\\": 0,
        \\"revision_count\\": 1,
        \\"name\\": \\"Practical\\"
    },
    {
        \\"_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"feature_tags\\": [],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:22:17.026Z\\",
        \\"modified\\": \\"2021-12-29T20:47:22.071Z\\",
        \\"step_count\\": 1,
        \\"revision_count\\": 3,
        \\"name\\": \\"The Answer is Always Testing\\",
        \\"summary\\": \\"Pipeline for dynamic CI tests.\\"
    }
]
"
`;

exports[`refactrctl list pipelines should work 3`] = `
"-
    _id: 61e72f74597da5d29cac3c49
    feature_tags: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-01-18T21:21:56.247Z'
    modified: '2022-01-18T21:21:56.247Z'
    step_count: 0
    revision_count: 1
    name: Practical
-
    _id: 61ccc379d42b9b0f518365db
    feature_tags: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:22:17.026Z'
    modified: '2021-12-29T20:47:22.071Z'
    step_count: 1
    revision_count: 3
    name: The Answer is Always Testing
    summary: Pipeline for dynamic CI tests.

"
`;

exports[`refactrctl list pipelines throws on missing arguments 1`] = `
"refactrctl list pipelines

List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the pipelines  [string] [required]
      --sort        Sort order  [choices: \\"modified_asc\\", \\"modified_desc\\", \\"name_asc\\", \\"name_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list projects should work 1`] = `
"_id                       name                                           pipeline_count  organization_id           created             
61ccbe03d42b9bdcc88365d8  CRUD Testing                                   2               61cc93942529b6ec9681e4e2  12/29/2021, 7:58 PM 
6010f6e2a830874a04689246  CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)  10              5f9f2d08e2f1bb2436e6f5b0  01/27/2021, 5:15 AM 
617711bbda9b615a36917ef2  Dan Testing                                    5               5f9f2d08e2f1bb2436e6f5b0  10/25/2021, 8:21 PM 
5fa4dba223b4e0703b95c465  Full Kitchen Sink                              41              5f9f2d08e2f1bb2436e6f5b0  11/06/2020, 5:14 AM 
5f9f3b02233d0b9e290b3122  Scratch                                        59              5f9f2d08e2f1bb2436e6f5b0  11/01/2020, 10:47 PM
607f19bd98a5b821d3ca5f13  Runner Dog Food                                8               5f9f2d08e2f1bb2436e6f5b0  04/20/2021, 6:13 PM 
6202e247f2b3eb9542b9c466  Carlos Testing                                 1               5f9f2d08e2f1bb2436e6f5b0  02/08/2022, 9:36 PM 
61f99a75597da55553ac3c8d  Duck Scans                                     3               5f9f2d08e2f1bb2436e6f5b0  02/01/2022, 8:39 PM 
61fd8937df32e924f68eed35  Hello World                                    0               5f9f2d08e2f1bb2436e6f5b0  02/04/2022, 8:14 PM 
60080aae44a4547e8423894b  ABC                                            2               5f9f2d08e2f1bb2436e6f5b0  01/20/2021, 10:49 AM
"
`;

exports[`refactrctl list projects should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:58:59.813Z\\",
        \\"modified\\": \\"2022-02-23T18:07:04.450Z\\",
        \\"pipeline_count\\": 2,
        \\"name\\": \\"CRUD Testing\\"
    },
    {
        \\"_id\\": \\"6010f6e2a830874a04689246\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-01-27T05:15:14.584Z\\",
        \\"modified\\": \\"2022-02-22T20:06:55.969Z\\",
        \\"pipeline_count\\": 10,
        \\"name\\": \\"CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)\\"
    },
    {
        \\"_id\\": \\"617711bbda9b615a36917ef2\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-10-25T20:21:15.612Z\\",
        \\"modified\\": \\"2022-02-18T21:36:14.694Z\\",
        \\"pipeline_count\\": 5,
        \\"name\\": \\"Dan Testing\\",
        \\"icon_name\\": \\"pills\\"
    },
    {
        \\"_id\\": \\"5fa4dba223b4e0703b95c465\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-06T05:14:10.990Z\\",
        \\"modified\\": \\"2022-02-16T17:10:25.818Z\\",
        \\"pipeline_count\\": 41,
        \\"name\\": \\"Full Kitchen Sink\\",
        \\"image_id\\": \\"5feeecacb5297d642e1938da\\"
    },
    {
        \\"_id\\": \\"5f9f3b02233d0b9e290b3122\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-01T22:47:30.770Z\\",
        \\"modified\\": \\"2022-02-16T16:49:11.179Z\\",
        \\"pipeline_count\\": 59,
        \\"name\\": \\"Scratch\\",
        \\"image_id\\": \\"600b6b5c25b0b52703ea3f0c\\"
    },
    {
        \\"_id\\": \\"607f19bd98a5b821d3ca5f13\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-04-20T18:13:17.407Z\\",
        \\"modified\\": \\"2022-02-15T17:57:18.451Z\\",
        \\"pipeline_count\\": 8,
        \\"name\\": \\"Runner Dog Food\\",
        \\"image_id\\": \\"607f19d896b0a463afd1ccb5\\"
    },
    {
        \\"_id\\": \\"6202e247f2b3eb9542b9c466\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-08T21:36:07.354Z\\",
        \\"modified\\": \\"2022-02-11T09:00:45.647Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"Carlos Testing\\"
    },
    {
        \\"_id\\": \\"61f99a75597da55553ac3c8d\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-01T20:39:17.776Z\\",
        \\"modified\\": \\"2022-02-09T22:21:03.342Z\\",
        \\"pipeline_count\\": 3,
        \\"name\\": \\"Duck Scans\\",
        \\"image_id\\": \\"61f99b4c068d9107f4019c53\\"
    },
    {
        \\"_id\\": \\"61fd8937df32e924f68eed35\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-04T20:14:47.422Z\\",
        \\"modified\\": \\"2022-02-04T20:14:47.422Z\\",
        \\"pipeline_count\\": 0,
        \\"name\\": \\"Hello World\\"
    },
    {
        \\"_id\\": \\"60080aae44a4547e8423894b\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-01-20T10:49:18.861Z\\",
        \\"modified\\": \\"2022-02-03T14:45:33.929Z\\",
        \\"pipeline_count\\": 2,
        \\"name\\": \\"ABC\\"
    }
]
"
`;

exports[`refactrctl list projects should work 3`] = `
"-
    _id: 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:58:59.813Z'
    modified: '2022-02-23T18:07:04.450Z'
    pipeline_count: 2
    name: CRUD Testing
-
    _id: 6010f6e2a830874a04689246
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-01-27T05:15:14.584Z'
    modified: '2022-02-22T20:06:55.969Z'
    pipeline_count: 10
    name: 'CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)'
-
    _id: 617711bbda9b615a36917ef2
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-10-25T20:21:15.612Z'
    modified: '2022-02-18T21:36:14.694Z'
    pipeline_count: 5
    name: Dan Testing
    icon_name: pills
-
    _id: 5fa4dba223b4e0703b95c465
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-06T05:14:10.990Z'
    modified: '2022-02-16T17:10:25.818Z'
    pipeline_count: 41
    name: Full Kitchen Sink
    image_id: 5feeecacb5297d642e1938da
-
    _id: 5f9f3b02233d0b9e290b3122
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-01T22:47:30.770Z'
    modified: '2022-02-16T16:49:11.179Z'
    pipeline_count: 59
    name: Scratch
    image_id: 600b6b5c25b0b52703ea3f0c
-
    _id: 607f19bd98a5b821d3ca5f13
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-04-20T18:13:17.407Z'
    modified: '2022-02-15T17:57:18.451Z'
    pipeline_count: 8
    name: Runner Dog Food
    image_id: 607f19d896b0a463afd1ccb5
-
    _id: 6202e247f2b3eb9542b9c466
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-08T21:36:07.354Z'
    modified: '2022-02-11T09:00:45.647Z'
    pipeline_count: 1
    name: Carlos Testing
-
    _id: 61f99a75597da55553ac3c8d
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-01T20:39:17.776Z'
    modified: '2022-02-09T22:21:03.342Z'
    pipeline_count: 3
    name: Duck Scans
    image_id: 61f99b4c068d9107f4019c53
-
    _id: 61fd8937df32e924f68eed35
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-04T20:14:47.422Z'
    modified: '2022-02-04T20:14:47.422Z'
    pipeline_count: 0
    name: Hello World
-
    _id: 60080aae44a4547e8423894b
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-01-20T10:49:18.861Z'
    modified: '2022-02-03T14:45:33.929Z'
    pipeline_count: 2
    name: ABC

"
`;

exports[`refactrctl list runners should work (by project) 1`] = `
"_id                       organization_id           name            host_type  machine_type  version  started  heartbeat  status   idle_since  stop_pending  created            
61ccb65bd42b9b66fa8365d2  61cc93942529b6ec9681e4e2  CI Test Runner  -          -             -        -        -          Running  -           -             12/29/2021, 7:26 PM
"
`;

exports[`refactrctl list runners should work (by project) 2`] = `
"[
    {
        \\"_id\\": \\"61ccb65bd42b9b66fa8365d2\\",
        \\"project_ids\\": [
            \\"61cca573d42b9b46428365c8\\",
            \\"61ccbe03d42b9bdcc88365d8\\"
        ],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:26:19.277Z\\",
        \\"name\\": \\"CI Test Runner\\",
        \\"type\\": \\"aws_vm_centos8\\",
        \\"hosted\\": true,
        \\"status\\": \\"Running\\",
        \\"idle\\": true,
        \\"agent_version\\": \\"1.106.4\\",
        \\"last_run\\": \\"2022-02-23T18:10:21.080Z\\"
    }
]
"
`;

exports[`refactrctl list runners should work (by project) 3`] = `
"-
    _id: 61ccb65bd42b9b66fa8365d2
    project_ids:
        - 61cca573d42b9b46428365c8
        - 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:26:19.277Z'
    name: CI Test Runner
    type: aws_vm_centos8
    hosted: true
    status: Running
    idle: true
    agent_version: 1.106.4
    last_run: '2022-02-23T18:10:21.080Z'

"
`;

exports[`refactrctl list runners throws on missing arguments 1`] = `
"refactrctl list runners

List runners for an organization or a project

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter           Filter output using JsonPath  [string]
      --address          Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token       Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help             Show help  [boolean]
      --project-id       ID of the project containing the runners  [string]
      --organization-id  ID of the organization containing the runners  [string]

Missing required argument: either organization-id or project-id
"
`;

exports[`refactrctl list runs throws on missing arguments 1`] = `
"refactrctl runs [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the organization containing the runs  [string] [required]
      --pipeline-id  ID of a pipeline used to filter the runs  [string]
      --job-id       ID of a job used to filter the runs  [string]
      --sort         Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list throws on missing subcommand 1`] = `
"Usage: refactrctl list <command> [options]

Commands:
  refactrctl list credentials         List credentials from a project
  refactrctl list projects            List projects from an organization
  refactrctl list organizations       List organizations to which authenticated user belongs
  refactrctl list jobs                List jobs for a project
  refactrctl list runs                List runs for a project
  refactrctl list pipeline-revisions  List pipeline revisions for a pipeline
  refactrctl list runners             List runners for an organization or a project
  refactrctl list pipelines           List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]

Command must be specified
"
`;
